# Hand-Control-Tetris

./: .gitattributes  README.md  pyproject.toml
hand_control_tetris/: cv2.py  handController.py  hand_controller.py  tetris.py
