[tool.poetry]
name = "hand-control-tetris"
version = "0.1.0"
description = ""
authors = ["ChurroC <charanvenkatchandran@gmail.com>"]
readme = "README.md"
packages = [{include = "hand_control_tetris"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0.66"
mediapipe = "^0.9.0.1"

[tool.poetry.scripts]
start = "hand_control_tetris/tetris.py:start"
dev_start = "watchmedo:run"

[tool.poetry.group.dev.dependencies]
watchdog = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
