[tool.poetry]
name = "hand-control-tetris"
version = "0.1.0"
description = ""
authors = ["ChurroC <charanvenkatchandran@gmail.com>"]
readme = "README.md"
packages = [{include = "hand_control_tetris"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.6.0.66"
mediapipe = "^0.9.0.1"
pillow = "^9.3.0"

[tool.poetry.scripts]
start = "hand_control_tetris.tetris:main"
camera = "hand_control_tetris.hand_controller:main"

[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"